Bug 1094538 - Remove gap between selected tab and side of browser caused by padding on TabsToolbar;r=MattN
UltraBlame original commit: 9737f919f1c0b9fe18e3582805aef50731fae919

--- a/browser/themes/windows/devedition.css
+++ b/browser/themes/windows/devedition.css
@@ -67,6 +67,12 @@
   text-shadow: none !important;
 }
 
+
+#main-window[sizemode=normal] #TabsToolbar {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 #main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[chromehidden~="menubar"] #toolbar-menubar ~ #TabsToolbar,
 #main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
   margin-top: 22px;
